# uplink-modded

./: .gitignore  .gitmodules  BUILDING.linux  BUILDING.windows.txt  CMakeLists.txt  Makefile  standard.mk  vcpkg.json
uplink/lib/: CMakeLists.txt
uplink/lib/bungle/: CMakeLists.txt  bungle.cpp  bungle.h
uplink/lib/eclipse/: CMakeLists.txt  animation.cpp  animation.h  button.cpp  button.h  eclipse.cpp  eclipse.h
uplink/lib/gucci/: CMakeLists.txt  gucci.cpp  gucci.h  gucci_glut.cpp  gucci_internal.h  gucci_sdl.cpp.in  image.cpp  image.h  resize_unix.cpp
uplink/lib/irclib/: CMakeLists.txt  CrossThreadsMessagingDevice.cpp  CrossThreadsMessagingDevice.h  irc.cpp  irc.h  socket.cpp  test.cpp
uplink/lib/irclib/linux/: missing.cpp  missing.h  windows.cpp
uplink/lib/mmgr/: CMakeLists.txt
uplink/lib/redshirt/: CMakeLists.txt  hash.cpp  hash.h  redshirt.cpp  redshirt.h
uplink/lib/soundgarden/: CMakeLists.txt  sgplaylist.cpp  sgplaylist.h  soundgarden.cpp  soundgarden.h  soundgarden_sdlmixer.cpp
uplink/lib/tcp4u.331/: CMakeLists.txt
uplink/lib/tosser/: CMakeLists.txt  btree.cpp  darray.cpp  llist.cpp  tosser.h
uplink/lib/unrar/: CMakeLists.txt  readme.txt  sha1.hpp
uplink/lib/vanbakel/: CMakeLists.txt  interface.cpp  interface.h  task.cpp  task.h  taskwrapper.cpp  taskwrapper.h  vanbakel.cpp  vanbakel.h
uplink/src/: CMakeLists.txt  Doxyfile  ExceptionHandler.cpp  ExceptionHandler.h  GetWinVer.cpp  Makefile  MiniVersion.cpp  resources.rc  stdafx.cpp  uplink.cpp  version.cpp
uplink/src/app/: app.cpp  app.h  binreloc.cpp  binreloc.h  dos2unix.cpp  dos2unix.h  globals.h  globals_defines.h.in  miscutils.cpp  miscutils.h  opengl.cpp  opengl.h  opengl_interface.cpp  opengl_interface.h  probability.cpp  probability.h  resizex.cpp  serialise.cpp  serialise.h  uplinkobject.cpp  uplinkobject.h
uplink/src/data/: changes.txt
uplink/src/data/docs/: SDL_Mixer.patch
uplink/src/game/: game.cpp  game.h  gameobituary.cpp  gameobituary.h  scriptlibrary.cpp  scriptlibrary.h
uplink/src/game/data/: data.cpp  data.h
uplink/src/interface/: interface.cpp  interface.h  interfacescreen.cpp  interfacescreen.h  scrollbox.cpp  scrollbox.h
uplink/src/interface/localinterface/: analyser_interface.cpp  analyser_interface.h  cheat_interface.cpp  cheat_interface.h  email_interface.cpp  email_interface.h  evtqueue_interface.cpp  evtqueue_interface.h  finance_interface.cpp  finance_interface.h  gateway_interface.cpp  gateway_interface.h  hud_interface.cpp  hud_interface.h  hw_interface.cpp  hw_interface.h  irc_interface.cpp  irc_interface.h  keyboardinterface.cpp  keyboardinterface.h  lan_interface.cpp  lan_interface.h  localinterface.cpp  localinterface.h  localinterfacescreen.cpp  localinterfacescreen.h  memory_interface.cpp  memory_interface.h  mission_interface.cpp  mission_interface.h  phonedialler.cpp  phonedialler.h  sendmail_interface.cpp  sendmail_interface.h  status_interface.cpp  status_interface.h  sw_interface.cpp  sw_interface.h  template_interface.cpp  template_interface.h
uplink/src/interface/remoteinterface/: academicscreen_interface.cpp  academicscreen_interface.h  accountscreen_interface.cpp  accountscreen_interface.h  bbsscreen_interface.cpp  bbsscreen_interface.h  changegatewayscreen_interface.cpp  changegatewayscreen_interface.h  codecardscreen_interface.cpp  codecardscreen_interface.h  companyinfoscreen_interface.cpp  companyinfoscreen_interface.h  consolescreen_interface.cpp  consolescreen_interface.h  contactscreen_interface.cpp  contactscreen_interface.h  criminalscreen_interface.cpp  criminalscreen_interface.h  cypherscreen_interface.cpp  cypherscreen_interface.h  dialogscreen_interface.cpp  dialogscreen_interface.h  disconnectedscreen_interface.cpp  disconnectedscreen_interface.h  faithscreen_interface.cpp  faithscreen_interface.h  fileserverscreen_interface.cpp  fileserverscreen_interface.h  highsecurityscreen_interface.cpp  highsecurityscreen_interface.h  hwsalesscreen_interface.cpp  hwsalesscreen_interface.h  linksscreen_interface.cpp  linksscreen_interface.h  loansscreen_interface.cpp  loansscreen_interface.h  logscreen_interface.cpp  logscreen_interface.h  menuscreen_interface.cpp  menuscreen_interface.h  (+38 more)
uplink/src/interface/taskmanager/: decrypter.cpp  decrypter.h  decypher.cpp  decypher.h  defrag.cpp  defrag.h  dictionaryhacker.cpp  dictionaryhacker.h  faith.cpp  filecopier.cpp  filecopier.h  filedeleter.cpp  filedeleter.h  firewalldisable.cpp  firewalldisable.h  gatewaynuke.cpp  gatewaynuke.h  iplookup.cpp  iplookup.h  ipprobe.cpp  ipprobe.h  lanforce.cpp  lanforce.h  lanprobe.cpp  (+35 more)
uplink/src/mainmenu/: closing_interface.cpp  closing_interface.h  connectionlost_interface.cpp  connectionlost_interface.h  demogameover_interface.cpp  demogameover_interface.h  disavowed_interface.cpp  disavowed_interface.h  firsttimeloading_interface.cpp  firsttimeloading_interface.h  genericoptions_interface.cpp  genericoptions_interface.h  graphicoptions_interface.cpp  graphicoptions_interface.h  loading_interface.cpp  loading_interface.h  login_interface.cpp  login_interface.h  mainmenu.cpp  mainmenu.h  mainmenuscreen.cpp  mainmenuscreen.h  networkoptions_interface.cpp  networkoptions_interface.h  obituary_interface.cpp  obituary_interface.h  options_interface.cpp  options_interface.h  revelationlost_interface.cpp  revelationlost_interface.h  revelationwon_interface.cpp  revelationwon_interface.h  theme_interface.cpp  theme_interface.h  theteam_interface.cpp  theteam_interface.h  warezgameover_interface.cpp  warezgameover_interface.h
uplink/src/network/: clientconnection.cpp  clientconnection.h  network.cpp  network.h  networkclient.cpp  networkclient.h  networkserver.cpp  networkserver.h
uplink/src/options/: options.cpp  options.h
uplink/src/symbols/: uplink-full-10.0-2021-12-09$.txt
uplink/src/view/: fps.cpp  fps.h  view.cpp  view.h
uplink/src/world/: agent.cpp  agent.h  connection.cpp  connection.h  date.cpp  date.h  message.cpp  message.h  person.cpp  person.h  player.cpp  player.h  rating.cpp  rating.h  vlocation.cpp  vlocation.h  world.cpp  world.h
(+4422 files in other folders)
